--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "@material-ui/core": "^4.6.1",
     "axios": "^0.19.0",
+    "common": "^0.2.5",
+    "core-util-is": "^1.0.2",
     "formik": "^2.0.4",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
